Work on the API & Docs.
