# src/api-docs/api.swagger.yaml
@@ -10,8 +10,13 @@ security:
 paths:
   /v1/map/metadata:
     get:
-      summary: Returns metadata regarding all available maps
-      description: Returns metadata regarding all available maps
+      summary: Returns metadata regarding all available maps.
+      description: >
+        Returns metadata regarding all available maps, the primary purpose of this call is to list available maps
+        and their core metadata. This method is primarily an aggregation of ```/v1/map/{map}/metadata``` for each map.
+        The version number returned is the version of the schema for this result and can usually be ignored.
+        The start property contains the default recommended starting position of any rendered map. This is overridden
+        by each map.
       responses:
         200:
           description: OK
@@ -22,18 +27,50 @@ paths:
                 properties:
                   version:
                     type: string
-                    description: The version of this metadata
+                    description: The version of this metadata.
                     example: "1.0.0"
                   maps:
                     type: array
+                    description: >
+                      A collection of Map Metadata objects which are an aggregation of ```/v1/map/{map}/metadata``` being called for each map.
                     items:
                       $ref: '#/components/schemas/MapMetadata'
                   start:
                     $ref: '#/components/schemas/StartMetadata'
+                example:
+                  version: '1.0'
+                  maps:
+                    - version: 1
+                      id: uk-flood-live
+                      title: UK Flood and Related
+                      location: uk
+                      default_layer_group: flood-only
+                      start_lat: 53
+                      start_lng: -2
+                      start_zoom: 6
+                      default_region_type: county
+                      last_date:
+                    - version: 1
+                      id: uk-flood-historical
+                      title: UK Flood (Historical)
+                      location: uk
+                      default_layer_group: flood
+                      start_lat: 53
+                      start_lng: -2
+                      start_zoom: 6
+                      default_region_type: coarse
+                      last_date: '2021-09-15T00:00:00.000Z'
+                  start:
+                    lat: 53
+                    lng: -2
+                    zoom: 6
+
   /v1/map/{map}/metadata:
     get:
-      summary: Returns metadata for the specified map
-      description: Returns metadata  for the specified map
+      summary: Returns metadata for a specific map
+      description: >
+        Returns metadata for a specific map.
+        See the id property of MapMetadata for what should be passed as the path parameter {map}.
       parameters:
         - $ref: '#/components/parameters/Map'
       responses:
@@ -47,9 +84,10 @@ paths:
   /v1/map/{map}/now:
     get:
       summary: Returns the latest date for which there is data for the specified map.
-      description: "
-      Returns the latest date for which there is data for the specified map. For archived map data this will be a fixed date, otherwise it's the last time data was processed.
-      "
+      description: >
+        Returns the latest date for which there is data for the specified map.
+        For archived map data this will be a fixed date (i.e. the last_date field in MapMetadata),
+        otherwise, it's the last time data was processed.
       parameters:
         - $ref: '#/components/parameters/Map'
       responses:
@@ -63,7 +101,8 @@ paths:
 
   /v1/map/{map}/region-type/{regionType}/regions:
     get:
-      description: Returns the regions for a given region type and map.
+      summary: Returns the regions for a given region type and map.
+      description: Returns the regions for a given region type and map as an array of identifiers.
       parameters:
         - $ref: '#/components/parameters/Map'
         - $ref: '#/components/parameters/RegionType'
@@ -83,6 +122,7 @@ paths:
 
   /v1/map/{map}/regions:
     get:
+      summary: Returns all the region and region type combinations for a given map.
       description: Returns all the region and region type combinations for a given map.
       parameters:
         - $ref: '#/components/parameters/Map'
@@ -94,24 +134,8 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    text:
-                      type: string
-                      description: A human-readable string describing the region
-                      example: Dorset
-                    value:
-                      description: An identifier for the region.
-                      type: string
-                      example: dorset
-                    type:
-                      type: string
-                      description: The region type.
-                      example: county
-                    level:
-                      type: integer
-                      description: The aggregation level of the region.
-                      example: 1
+                  $ref: '#/components/schemas/RegionMetadata'
+
 
   /v1/map/{map}/region-type/{regionType}/region/{region}/geography:
     get:
@@ -129,6 +153,39 @@ paths:
               schema:
                 type: object
                 additionalProperties: true
+                example:
+                  type: MultiPolygon
+                  coordinates:
+                    - - - - -1.9558910160193534
+                          - 50.69082376519951
+                        - - -1.9558893443374288
+                          - 50.690823003820576
+                        - - -1.9558878401255066
+                          - 50.690821949512824
+                        - - -1.9558865541389825
+                          - 50.690820637850905
+                        - - -1.9558855297698494
+                          - 50.69081911309314
+                        - - -1.9558848015825583
+                          - 50.690817426688206
+                        - - -1.9558843941477386
+                          - 50.69081563553908
+                        - - -1.9558843212131305
+                          - 50.690813800083035
+                        - - -1.955884585239707
+                          - 50.69081198225238
+                        - - -1.955885177318635
+                          - 50.690810243384675
+                        - - -1.9558860774718787
+                          - 50.69080864215312
+                        - - -1.955887255326302
+                          - 50.69080723258677
+                        - - -2.009636095853156
+                          - 50.68342104040844
+                  properties:
+                    name: dorset
+                    title: Dorset
+
 
   /v1/map/{map}/text:
     post:
@@ -178,7 +235,10 @@ paths:
 
   /v1/map/{map}/recent-text-count:
     post:
-      description: "Returns the number of messages, i.e. tweets, since a specific time. This is provided so that recently active regions can be flagged."
+      summary: "Returns the number of messages, i.e. tweets, since a specific time."
+      description: >
+        Returns the number of messages, i.e. tweets, since a specific time.
+        This is provided so that recently active regions can be flagged.
       parameters:
         - $ref: '#/components/parameters/Map'
       requestBody:
@@ -198,6 +258,7 @@ paths:
 
   /v1/map/{map}/analytics/time:
     post:
+      summary: Returns data for a time series graph.
       description: Returns data for a time series graph.
       parameters:
         - $ref: '#/components/parameters/Map'
@@ -301,6 +362,20 @@ components:
         - $ref: '#/components/schemas/RegionDataRequest'
         - $ref: '#/components/schemas/PagedRequest'
         - $ref: '#/components/schemas/DateRangeRequest'
+      example:
+        hazards:
+          - flood
+        sources:
+          - twitter
+        warnings: exclude
+        pageSize: 300
+        page: 0
+        startDate: 1645394400000
+        endDate: 1645488000000
+        regionType: county
+        regions:
+          - north yorkshire
+
     StatsRequest:
       allOf:
         - $ref: '#/components/schemas/RegionDataRequest'
@@ -358,29 +433,6 @@ components:
           maximum: 100.0
           description: "The exceedance value for the region as a percentage. Lower is more unusual, higher is more usual."
 
-    TimeSeriesResponseItem:
-      type: object
-      description: "Stats for a given day/hour window per region"
-      properties:
-        region:
-          type: string
-          example: hertfordshire
-          description: "The region the statistics are for."
-        date:
-          type: string
-          example: "2021-02-22T00:00:00.000Z"
-          description: "UTC date string for the data."
-        count:
-          type: integer
-          example: 195
-          description: "The number of messages counted for this region."
-        exceedance:
-          type: number
-          example: 35.2
-          minimum: 0.0
-          maximum: 100.0
-          description: "The exceedance value for the region as a percentage. Lower is more unusual, higher is more usual."
-
     TextResponseItem:
       type: object
       properties:
@@ -422,7 +474,35 @@ components:
         warning:
           type: boolean
           description: "TRUE if the message comes from an automated warning."
-          example: false
+          example:
+            false
+      example:
+        $ref: "examples/text-response.yaml"
+
+
+    TimeSeriesResponseItem:
+      type: object
+      description: "Stats for a given day/hour window per region"
+      properties:
+        region:
+          type: string
+          example: hertfordshire
+          description: "The region the statistics are for."
+        date:
+          type: string
+          example: "2021-02-22T00:00:00.000Z"
+          description: "UTC date string for the data."
+        count:
+          type: integer
+          example: 195
+          description: "The number of messages counted for this region."
+        exceedance:
+          type: number
+          example: 35.2
+          minimum: 0.0
+          maximum: 100.0
+          description: "The exceedance value for the region as a percentage. Lower is more unusual, higher is more usual."
+
     StartMetadata:
       type: object
       properties:
@@ -435,16 +515,42 @@ components:
         zoom:
           type: integer
           example: 12
-    RegionMetadata:
+
+    CoreRegionMetadata:
       type: object
+      required:
+        - id
+        - title
       properties:
-        id:
-          type: string
-          example: "county"
         title:
           type: string
-          example: "Local Authority"
-      description: Region metadata
+          description: A human-readable string describing the region
+          example: Dorset
+        id:
+          description: An identifier for the region.
+          type: string
+          example: dorset
+
+    RegionMetadata:
+      allOf:
+        - $ref: '#/components/schemas/CoreRegionMetadata'
+        - type: object
+          description: Region metadata
+          required:
+            - id
+            - title
+            - type
+            - level
+          properties:
+            type:
+              type: string
+              description: The region type.
+              example: county
+            level:
+              type: integer
+              description: The aggregation level of the region.
+              example: 1
+
     MapMetadata:
       required:
         - defaultRegionType
@@ -463,11 +569,11 @@ components:
           example: "UK Flood"
         version:
           type: string
-          example: "1.0.0"
+          example: 1
         regionTypes:
           type: array
           items:
-            $ref: '#/components/schemas/RegionMetadata'
+            $ref: '#/components/schemas/CoreRegionMetadata'
         regionAggregations:
           type: array
           items:
@@ -487,3 +593,28 @@ components:
           type: string
           example: "county"
       description: Map metadata
+      example:
+        id: uk-flood-live
+        title: UK Flood
+        version: 1
+        location: uk
+        regionTypes:
+          - id: county
+            title: Local Authority
+          - id: fine
+            title: Fine Grid
+          - id: coarse
+            title: Coarse Grid
+          - id: uk_country
+            title: UK Countries
+          - id: iso_country
+            title: ISO Countries
+          - id: nuts1
+            title: UK Regions
+        regionAggregations:
+          - uk-countries
+        defaultRegionType: county
+        start:
+          lat: 53
+          lng: -2
+          zoom: 6
